z-index issue

--- a/app/styles/includes/modal.styl
+++ b/app/styles/includes/modal.styl
@@ -7,6 +7,7 @@
   height 100%
   -webkit-transition all 0.5s ease-in-out
   transition all 0.5s ease-in-out
+  z-index 100
   &.active
     background rgba(0, 0, 0, 0.7)
 
@@ -19,6 +20,7 @@
   top 30%
   left 30%
   background #fff
+  z-index 150
   -webkit-transition all 0.3s ease
   transition all 0.3s ease
   opacity 0
