--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,6 @@
-.modal-overlay{background:rgba(0,0,0,0);position:absolute;top:0;left:0;width:100%;height:100%;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out;}
+.modal-overlay{background:rgba(0,0,0,0);position:absolute;top:0;left:0;width:100%;height:100%;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out;z-index:100;}
 .modal-overlay.active{background:rgba(0,0,0,0.7)}
-.modal{color:#000;padding:20px;width:40%;height:40%;position:absolute;top:30%;left:30%;background:#fff;-webkit-transition:all .3s ease;transition:all .3s ease;opacity:0;-webkit-transform-origin:150% 70%;transform-origin:150% 70%;-webkit-transform:rotate(-30deg);transform:rotate(-30deg);}
+.modal{color:#000;padding:20px;width:40%;height:40%;position:absolute;top:30%;left:30%;background:#fff;z-index:150;-webkit-transition:all .3s ease;transition:all .3s ease;opacity:0;-webkit-transform-origin:150% 70%;transform-origin:150% 70%;-webkit-transform:rotate(-30deg);transform:rotate(-30deg);}
 .modal.active{-webkit-transform:rotate(0);transform:rotate(0);opacity:1}
 .modal h2{margin-top:0;text-transform:uppercase}
 .modal .close-modal{position:absolute;top:0;right:0;font-size:22px;padding:20px;cursor:pointer}
@@ -19,7 +19,7 @@
 body{background:#000;position:absolute;height:100%;width:100%;margin:0;font-family:'Raleway';font-weight:100;color:#fff}
 h1{font-weight:500;text-transform:uppercase;font-size:68px;text-align:center;margin-top:64px}
 img{width:110px;height:110px;border-radius:50%;position:absolute;z-index:10;left:50%;margin-left:-55px;margin-top:-45px}
-#calendarMenuBtn{position:absolute;bottom:0;right:0;z-index:10;font-size:40px;text-shadow:0 -2px rgba(0,0,0,0.3);background:transparent;border:none;color:#fff;font-family:Times New Roman,Times New Roman,Times,serif;padding:10px;line-height:30px;cursor:pointer;text-decoration:none}
+#calendarMenuBtn{position:absolute;bottom:0;right:0;z-index:110;font-size:40px;text-shadow:0 -2px rgba(0,0,0,0.3);background:transparent;border:none;color:#fff;font-family:Times New Roman,Times New Roman,Times,serif;padding:10px;line-height:30px;cursor:pointer;text-decoration:none}
 .time-remaining{font-size:51px;text-align:center;margin-top:-3px}
 .polar-clock-container{position:absolute;width:100%;height:50%;bottom:0;padding:0 50px 70px 50px;box-sizing:border-box}
 .room-status-text{position:absolute;top:50%;margin-top:-70px;left:0;font-size:43px;text-align:center;width:100%;text-shadow:0 -2px rgba(0,0,0,0.3)}
