--- a/app/styles/rooms/common.styl
+++ b/app/styles/rooms/common.styl
@@ -29,7 +29,7 @@ img
   position absolute
   bottom 0
   right 0
-  z-index 10
+  z-index 110
   font-size 40px
   text-shadow 0 -2px rgba(0,0,0,0.3)
   background transparent
